Added Review model and processors for adding, getting and deleting reviews. Also added S3Controller for connection to Amazon database for working with photo and video. Added endpoints to S3Controller only for Review.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 
-#aws.access-key=${AWS_ACCESS_KEY_ID}
-#aws.secret-key=${AWS_SECRET_ACCESS_KEY}
-#aws.region=${AWS_REGION}
-#aws.s3.bucket=${AWS_S3_BUCKET}
+aws.access-key=${AWS_ACCESS_KEY_ID}
+aws.secret-key=${AWS_SECRET_ACCESS_KEY}
+aws.region=${AWS_REGION}
+aws.s3.bucket=${AWS_S3_BUCKET}
 
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
